--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="keywords" content="fotografie, brussels, brussel, fotograaf, documentary, portrait">
   <meta name="author" content="Lars Quix">
 
-  <title>LARS QUIX</title>
+  <title>LARS QUIX.</title>
 
 <!-- GOOGLE FONTS -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
