--- a/commisioned.html
+++ b/commisioned.html
@@ -20,7 +20,7 @@
 <body>
 
   <div class="p-4 flex flex-wrap justify-between">
-    <a href="index.html"><h1>Lars Quix</h1></a>
+    <a href="index.html"><h1 class="text-2xl">Lars Quix</h1></a>
 
 
     <nav>
@@ -37,7 +37,7 @@
           <li class="px-2 my-1">
             <span class="block w-4 h-1 list-separator"></span></li>
           <li class="px-3 my-1">
-            <a href="#">ABOUT</a>
+            <a href="about.html">ABOUT</a>
           </li>
           <li class="px-2 my-1">
             <span class="block w-4 h-1 list-separator"></span></li>
