--- a/about.html
+++ b/about.html
@@ -6,8 +6,9 @@
   <meta name="description" content="webportfolio">
   <meta name="keywords" content="fotografie, brussels, brussel, fotograaf, documentary, portrait">
   <meta name="author" content="Lars Quix">
+    <link rel="shortcut icon" type="image/png" href="images/favicon.png">
 
-  <title>LQ about</title>
+  <title>ABOUT | LARS QUIX</title>
 
 <!-- GOOGLE FONTS -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -54,10 +55,10 @@
 <div class="px-4 md:px-12">
     <div class="w-full md:w-2/3 mx-auto">
         <h2 class="text-2xl mb-2">About</h2>
-        <p class="mb-4">Hi, I'm Lars, a belgian photographer, based in Brussels</p>
+        <p class="mb-4">Hi, I'm Lars, a belgian photo/videographer, based in Brussels.</p>
         <p class="mb-4">contact me: <br><a href="mailto:lars.quix@outlook.com">lars.quix@outlook.com</a><br><a href="tel:0472846256">0472846256</a></p>
         <div class="w-full sm:w-2/3">
-            <img src="images/19LarsQuix_03.jpg" alt="">
+            <img src="images/background.jpg" alt="">
         </div>
     </div>
 </div>
