--- a/commisioned.html
+++ b/commisioned.html
@@ -6,8 +6,9 @@
   <meta name="description" content="webportfolio">
   <meta name="keywords" content="fotografie, brussels, brussel, fotograaf, documentary, portrait">
   <meta name="author" content="Lars Quix">
+    <link rel="shortcut icon" type="image/png" href="images/favicon.png">
 
-  <title>LQ commisioned</title>
+  <title>COMMISONED | LARS QUIX</title>
 
 <!-- GOOGLE FONTS -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -60,55 +61,105 @@
 <div class="px-4 md:px-12">
   <div id="masonry">
     <div class="masonry-item">
-                <a href="images/19LarsQuix_01.jpg"
+                <a href="images/commisioned/LQ-1.jpg"
                    data-fancybox="gallery"
-                   data-caption="Optional caption">
-                    <img src="images/19LarsQuix_01.jpg" alt="">
+                   data-caption="">
+                    <img src="images/commisioned/LQ-1.jpg" alt="">
                 </a>
             </div>
             <div class="masonry-item">
-                        <a href="images/19LarsQuix_02.jpg"
+                        <a href="images/commisioned/LQ-12.jpg"
                            data-fancybox="gallery"
-                           data-caption="Optional caption">
-                            <img src="images/19LarsQuix_02.jpg" alt="">
+                           data-caption="">
+                            <img src="images/commisioned/LQ-12.jpg" alt="">
                         </a>
                     </div>
             <div class="masonry-item">
-                        <a href="images/19LarsQuix_03.jpg"
+                        <a href="images/commisioned/LQ-14.jpg"
                              data-fancybox="gallery"
-                             data-caption="Optional caption">
-                              <img src="images/19LarsQuix_03.jpg" alt="">
+                             data-caption="">
+                              <img src="images/commisioned/LQ-14.jpg" alt="">
                             </a>
                         </div>
             <div class="masonry-item">
-                        <a href="images/19LarsQuix_04.jpg"
+                        <a href="images/commisioned/LQ-13.jpg"
                             data-fancybox="gallery"
-                            data-caption="Optional caption">
-                              <img src="images/19LarsQuix_04.jpg" alt="">
+                            data-caption="">
+                              <img src="images/commisioned/LQ-13.jpg" alt="">
                             </a>
                         </div>
             <div class="masonry-item">
-                        <a href="images/19LarsQuix_06.jpg"
+                        <a href="images/commisioned/LQ-27.jpg"
                             data-fancybox="gallery"
-                            data-caption="Optional caption">
-                              <img src="images/19LarsQuix_06.jpg" alt="">
+                            data-caption="">
+                              <img src="images/commisioned/LQ-27.jpg" alt="">
                             </a>
                         </div>
             <div class="masonry-item">
-                        <a href="images/19LarsQuix_07.jpg"
+                        <a href="images/commisioned/LQ-26.jpg"
                             data-fancybox="gallery"
-                            data-caption="Optional caption">
-                              <img src="images/19LarsQuix_07.jpg" alt="">
+                            data-caption="">
+                              <img src="images/commisioned/LQ-26.jpg" alt="">
                             </a>
                         </div>
             <div class="masonry-item">
-                        <a href="images/19LarsQuix_08.jpg"
+                        <a href="images/commisioned/LQ-30.jpg"
                             data-fancybox="gallery"
-                            data-caption="Optional caption">
-                              <img src="images/19LarsQuix_08.jpg" alt="">
+                            data-caption="">
+                              <img src="images/commisioned/LQ-30.jpg" alt="">
                             </a>
                           </div>
-</div>
+            <div class="masonry-item">
+                        <a href="images/commisioned/LQ-16.jpg"
+                              data-fancybox="gallery"
+                              data-caption="">
+                              <img src="images/commisioned/LQ-16.jpg" alt="">
+                            </a>
+                          </div>
+            <div class="masonry-item">
+                        <a href="images/commisioned/LQ-17.jpg"
+                              data-fancybox="gallery"
+                              data-caption="">
+                                <img src="images/commisioned/LQ-17.jpg" alt="">
+                              </a>
+                          </div>
+            <div class="masonry-item">
+                          <a href="images/commisioned/LQ-18.jpg"
+                              data-fancybox="gallery"
+                              data-caption="">
+                                <img src="images/commisioned/LQ-18.jpg" alt="">
+                              </a>
+                          </div>
+            <div class="masonry-item">
+                        <a href="images/commisioned/LQ-19.jpg"
+                              data-fancybox="gallery"
+                              data-caption="">
+                                <img src="images/commisioned/LQ-19.jpg" alt="">
+                              </a>
+                          </div>
+            <div class="masonry-item">
+                          <a href="images/commisioned/LQ-20.jpg"
+                                data-fancybox="gallery"
+                                data-caption="">
+                                  <img src="images/commisioned/LQ-20.jpg" alt="">
+                                </a>
+                            </div>
+            <div class="masonry-item">
+                            <a href="images/commisioned/LQ-15.jpg"
+                                data-fancybox="gallery"
+                                data-caption="">
+                                    <img src="images/commisioned/LQ-15.jpg" alt="">
+                                </a>
+                            </div>
+            <div class="masonry-item">
+                            <a href="images/commisioned/LQ-29.jpg"
+                            data-fancybox="gallery"
+                            data-caption="">
+                                    <img src="images/commisioned/LQ-29.jpg" alt="">
+                                </a>
+                            </div>
+
+  </div>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/macy@2"></script>
