--- a/editorial.html
+++ b/editorial.html
@@ -6,8 +6,9 @@
   <meta name="description" content="webportfolio">
   <meta name="keywords" content="fotografie, brussels, brussel, fotograaf, documentary, portrait">
   <meta name="author" content="Lars Quix">
+    <link rel="shortcut icon" type="image/png" href="images/favicon.png">
 
-  <title>LQ editorial</title>
+  <title>EDITORIAL | LARS QUIX</title>
 
 <!-- GOOGLE FONTS -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,7 +21,7 @@
 <body>
 
   <div class="p-4 flex flex-wrap justify-between">
-  <a href="index.html"><h1>Lars Quix</h1></a>
+  <a href="index.html"><h1 class="text-2xl">Lars Quix</h1></a>
 
     <nav>
         <ul class="flex flex-row flex-wrap justify-end items-center">
@@ -36,7 +37,7 @@
           <li class="px-2 my-1">
             <span class="block w-4 h-1 list-separator"></span></li>
           <li class="px-3 my-1">
-            <a href="#">ABOUT</a>
+            <a href="about.html">ABOUT</a>
           </li>
           <li class="px-2 my-1">
             <span class="block w-4 h-1 list-separator"></span></li>
@@ -58,55 +59,98 @@
 
 <div class="px-4 md:px-12">
   <div id="masonry">
-    <div class="masonry-item">
-                <a href="images/19LarsQuix_01.jpg"
-                   data-fancybox="gallery"
-                   data-caption="Optional caption">
-                    <img src="images/19LarsQuix_01.jpg" alt="">
-                </a>
-            </div>
             <div class="masonry-item">
-                        <a href="images/19LarsQuix_02.jpg"
+                        <a href="images/editorial/LQ-2.jpg"
                            data-fancybox="gallery"
-                           data-caption="Optional caption">
-                            <img src="images/19LarsQuix_02.jpg" alt="">
+                           data-caption="">
+                            <img src="images/editorial/LQ-2.jpg" alt="">
                         </a>
                     </div>
             <div class="masonry-item">
-                        <a href="images/19LarsQuix_03.jpg"
+                        <a href="images/editorial/LQ-3.jpg"
                              data-fancybox="gallery"
-                             data-caption="Optional caption">
-                              <img src="images/19LarsQuix_03.jpg" alt="">
+                             data-caption="">
+                              <img src="images/editorial/LQ-3.jpg" alt="">
                             </a>
                         </div>
             <div class="masonry-item">
-                        <a href="images/19LarsQuix_04.jpg"
+                        <a href="images/editorial/LQ-4.jpg"
                             data-fancybox="gallery"
-                            data-caption="Optional caption">
-                              <img src="images/19LarsQuix_04.jpg" alt="">
+                            data-caption="">
+                              <img src="images/editorial/LQ-4.jpg" alt="">
                             </a>
                         </div>
             <div class="masonry-item">
-                        <a href="images/19LarsQuix_06.jpg"
+                        <a href="images/editorial/LQ-35.jpg"
                             data-fancybox="gallery"
-                            data-caption="Optional caption">
-                              <img src="images/19LarsQuix_06.jpg" alt="">
+                            data-caption="">
+                              <img src="images/editorial/LQ-35.jpg" alt="">
                             </a>
                         </div>
             <div class="masonry-item">
-                        <a href="images/19LarsQuix_07.jpg"
+                        <a href="images/editorial/LQ-36.jpg"
                             data-fancybox="gallery"
-                            data-caption="Optional caption">
-                              <img src="images/19LarsQuix_07.jpg" alt="">
+                            data-caption="">
+                              <img src="images/editorial/LQ-36.jpg" alt="">
                             </a>
                         </div>
             <div class="masonry-item">
-                        <a href="images/19LarsQuix_08.jpg"
+                        <a href="images/editorial/LQ-32.jpg"
                             data-fancybox="gallery"
-                            data-caption="Optional caption">
-                              <img src="images/19LarsQuix_08.jpg" alt="">
+                            data-caption="">
+                              <img src="images/editorial/LQ-32.jpg" alt="">
                             </a>
                           </div>
+            <div class="masonry-item">
+                        <a href="images/editorial/LQ-21.jpg"
+                              data-fancybox="gallery"
+                              data-caption="">
+                              <img src="images/editorial/LQ-21.jpg" alt="">
+                            </a>
+                          </div>
+            <div class="masonry-item">
+                        <a href="images/editorial/LQ-22.jpg"
+                              data-fancybox="gallery"
+                              data-caption="">
+                                <img src="images/editorial/LQ-22.jpg" alt="">
+                              </a>
+                          </div>
+            <div class="masonry-item">
+                          <a href="images/editorial/LQ-23.jpg"
+                              data-fancybox="gallery"
+                              data-caption="">
+                                <img src="images/editorial/LQ-23.jpg" alt="">
+                              </a>
+                          </div>
+            <div class="masonry-item">
+                        <a href="images/editorial/LQ-25.jpg"
+                              data-fancybox="gallery"
+                              data-caption="">
+                                <img src="images/editorial/LQ-25.jpg" alt="">
+                              </a>
+                          </div>
+            <div class="masonry-item">
+                          <a href="images/editorial/LQ-34.jpg"
+                                data-fancybox="gallery"
+                                data-caption="">
+                                  <img src="images/editorial/LQ-34.jpg" alt="">
+                                </a>
+                            </div>
+            <div class="masonry-item">
+                            <a href="images/editorial/LQ-33.jpg"
+                                data-fancybox="gallery"
+                                data-caption="">
+                                    <img src="images/editorial/LQ-33.jpg" alt="">
+                                </a>
+                            </div>
+            <div class="masonry-item">
+                            <a href="images/editorial/LQ-6.jpg"
+                            data-fancybox="gallery"
+                            data-caption="">
+                                    <img src="images/editorial/LQ-6.jpg" alt="">
+                                </a>
+                            </div>
+
   </div>
 
 </div>
