--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
   <meta name="description" content="webportfolio">
   <meta name="keywords" content="fotografie, brussels, brussel, fotograaf, documentary, portrait">
   <meta name="author" content="Lars Quix">
+  <link rel="shortcut icon" type="image/png" href="images/favicon.png">
 
-  <title>LARS QUIX.</title>
+
+  <title>LARS QUIX</title>
 
 <!-- GOOGLE FONTS -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -41,7 +43,7 @@
           <li class="px-2 my-1">
             <span class="block w-4 h-1 list-separator"></span></li>
           <li class="px-3 my-1">
-            <a href="#">ABOUT</a>
+            <a href="about.html">ABOUT</a>
           </li>
           <li class="px-2 my-1">
             <span class="block w-4 h-1 list-separator"></span></li>
